# naiti

./: README.md  pyproject.toml
naiti/: __init__.py  backend.py  cli.py  client.py  config.py  corpus.py  docgen.py  grader.py  provision.py  quota.py  report.py  runner.py
packaging/: HOMEBREW.md  naiti.rb
