[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "naiti"
version = "1.0.0"
description = "Nexus AI Tester Internal — black-box answer-quality benchmark for the Nexus AI knowledge base"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Meridian / Nexus AI" }]
keywords = ["rag", "evaluation", "benchmark", "nexus"]

dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "groq>=0.9",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
]

[project.urls]
Homepage = "https://github.com/MegaSupearGo/naiti"

[project.scripts]
naiti = "naiti.cli:main"

[tool.setuptools.packages.find]
include = ["naiti*"]
